--- a/Flask_server/templates/index.html
+++ b/Flask_server/templates/index.html
@@ -16,7 +16,7 @@
     {% else %}
     <h2>사이트를 이용하려면 로그인하세요.</h2>
     <button class = 'loginBtn' onclick="window.location.href='/login'">로그인</button>
-    <button class = 'registerBtn' onclick="window.location.href='/register'">회원가입</button>
+    <button class = 'registerBtn' onclick="window.location.href='/member/register'">회원가입</button>
 
     {% endif %}
 </body>
