TF-13 데이터를 json 형태로 주고받기

--- a/Flask_server/templates/login.html
+++ b/Flask_server/templates/login.html
@@ -33,14 +33,16 @@
         let userId = document.querySelector("#userId").value;
         let userPw = document.querySelector("#userPw").value;   
 
-        let urlParams = new URLSearchParams({
+        let urlParams = {
             userId: userId,
             userPw: userPw,
-        });
+        };
+
+        let urlParamsjson = JSON.stringify(urlParams)
 
         let fetchOptions = {
             method: "POST",
-            body: urlParams,
+            body: urlParamsjson,
         }
 
         let response = await fetch("/member/login", fetchOptions);
