--- a/Android/app/src/main/res/drawable/item_selector.xml
+++ b/Android/app/src/main/res/drawable/item_selector.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:color="@color/black" />
     <item android:state_checked="true" android:color="@color/purple_500" />
-    <item android:color="@color/white" />
+    <item android:color="@color/black" />
 </selector>
