--- a/Android/app/src/main/res/menu/item_menu.xml
+++ b/Android/app/src/main/res/menu/item_menu.xml
@@ -3,4 +3,7 @@
     <item android:id="@+id/main"
         android:title="main" android:icon="@drawable/main"
         android:enabled="true" android:checked="true"/>
+    <item android:id="@+id/profile"
+        android:title="profile" android:icon="@drawable/profile"
+        android:enabled="true" />
 </menu>
