--- a/Android/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/app/src/main/res/layout/fragment_profile.xml
@@ -111,9 +111,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="30"
+                android:layout_weight="45"
                 android:orientation="vertical"
-                android:weightSum="20">
+                android:weightSum="45">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -208,6 +208,60 @@
                         android:textAlignment="textEnd"
                         android:gravity="center"
                         android:text="성별:"/>
+
+                    <TextView
+                        android:id="@+id/txt_sex"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="60" />
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="5"
+                    android:weightSum="100">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20"
+                        android:textAlignment="textEnd"
+                        android:gravity="center"
+                        android:text="화났을때:"/>
+
+                    <TextView
+                        android:id="@+id/txt_sex"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="60" />
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="5"
+                    android:weightSum="100">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20"
+                        android:textAlignment="textEnd"
+                        android:gravity="center"
+                        android:text="무서울때:"/>
 
                     <TextView
                         android:id="@+id/txt_sex"
