--- a/Flask_server/templates/statPostTest.html
+++ b/Flask_server/templates/statPostTest.html
@@ -50,6 +50,7 @@
         console.log(response);
         let data = await response.json();
         console.log(data)
+        alert(data.result)
         
     }
 </script>
