--- a/Android/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/app/src/main/res/layout/fragment_profile.xml
@@ -83,18 +83,19 @@
                 android:layout_height="0dp"
                 android:layout_weight="5"
                 android:orientation="horizontal"
+                android:gravity="center"
                 android:weightSum="100">
 
                 <Space
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="5" />
+                    android:layout_weight="27" />
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="68"
-                    android:gravity="left|center"
+                    android:layout_weight="46"
+                    android:gravity="center"
                     android:text="회원 정보"/>
 
                 <Button
@@ -111,9 +112,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="45"
+                android:layout_weight="30"
                 android:orientation="vertical"
-                android:weightSum="45">
+                android:weightSum="20">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -125,14 +126,14 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="20"
-                        android:textAlignment="textEnd"
-                        android:gravity="center"
+                        android:gravity="center|start"
                         android:text="회원명:"/>
 
                     <TextView
                         android:id="@+id/txt_name"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:gravity="center|start"
                         android:layout_weight="60" />
 
                     <Space
@@ -152,14 +153,14 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="20"
-                        android:textAlignment="textEnd"
-                        android:gravity="center"
+                        android:gravity="center|start"
                         android:text="아이디:"/>
 
                     <TextView
                         android:id="@+id/txt_id"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:gravity="center|start"
                         android:layout_weight="60" />
 
                     <Space
@@ -178,14 +179,14 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="20"
-                        android:textAlignment="textEnd"
-                        android:gravity="center"
+                        android:gravity="center|start"
                         android:text="이메일:"/>
 
                     <TextView
                         android:id="@+id/txt_email"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:gravity="center|start"
                         android:layout_weight="60" />
 
                     <Space
@@ -205,20 +206,59 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="20"
-                        android:textAlignment="textEnd"
-                        android:gravity="center"
+                        android:gravity="center|start"
                         android:text="성별:"/>
 
                     <TextView
                         android:id="@+id/txt_sex"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:gravity="center|start"
                         android:layout_weight="60" />
 
                     <Space
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="20" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="30"
+                android:orientation="vertical"
+                android:weightSum="30">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="5"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:weightSum="100">
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="27" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="46"
+                        android:gravity="center"
+                        android:text="감정별 선호 노래"/>
+
+                    <Button
+                        android:id="@+id/btn_fix_genre"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="27"
+                        android:text="노래 장르 수정"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:background="@drawable/buttonshapewhitebg" />
 
                 </LinearLayout>
 
@@ -232,13 +272,13 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="20"
-                        android:textAlignment="textEnd"
-                        android:gravity="center"
+                        android:gravity="center|start"
                         android:text="화났을때:"/>
 
                     <TextView
-                        android:id="@+id/txt_sex"
+                        android:id="@+id/txt_anger"
                         android:layout_width="0dp"
+                        android:gravity="center|start"
                         android:layout_height="match_parent"
                         android:layout_weight="60" />
 
@@ -259,14 +299,14 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="20"
-                        android:textAlignment="textEnd"
-                        android:gravity="center"
+                        android:gravity="center|start"
                         android:text="무서울때:"/>
 
                     <TextView
-                        android:id="@+id/txt_sex"
+                        android:id="@+id/txt_fear"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:gravity="center|start"
                         android:layout_weight="60" />
 
                     <Space
@@ -276,7 +316,89 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="5"
+                    android:weightSum="100">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20"
+                        android:gravity="center|start"
+                        android:text="행복할때:"/>
+
+                    <TextView
+                        android:id="@+id/txt_happy"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center|start"
+                        android:layout_weight="60" />
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="5"
+                    android:weightSum="100">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20"
+                        android:gravity="center|start"
+                        android:text="슬플때:"/>
+
+                    <TextView
+                        android:id="@+id/txt_sad"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center|start"
+                        android:layout_weight="60" />
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="5"
+                    android:weightSum="100">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20"
+                        android:gravity="center|start"
+                        android:text="놀랐을때:"/>
+
+                    <TextView
+                        android:id="@+id/txt_surprise"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center|start"
+                        android:layout_weight="60" />
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="20" />
+
+                </LinearLayout>
             </LinearLayout>
+
+
 
 
         </LinearLayout>
