--- a/Android/app/src/main/res/menu/item_menu.xml
+++ b/Android/app/src/main/res/menu/item_menu.xml
@@ -3,6 +3,9 @@
     <item android:id="@+id/main"
         android:title="main" android:icon="@drawable/main"
         android:enabled="true" android:checked="true"/>
+    <item android:id="@+id/statistic"
+        android:title="statistic" android:icon="@drawable/statistic"
+        android:enabled="true" />
     <item android:id="@+id/profile"
         android:title="profile" android:icon="@drawable/profile"
         android:enabled="true" />
