--- a/Android/app/src/main/res/layout/fragment_main.xml
+++ b/Android/app/src/main/res/layout/fragment_main.xml
@@ -12,4 +12,10 @@
         android:layout_height="match_parent"
         android:text="MainPage" />
 
+    <Button
+        android:id="@+id/btn_start_camera"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="시작하기" />
+
 </FrameLayout>
