--- a/Android/app/src/main/res/layout/emotion_item_list.xml
+++ b/Android/app/src/main/res/layout/emotion_item_list.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".emotion.YoutubeActivity">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/txt_recommend_emotion"
+        android:id="@+id/txt_recycler_emotion"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="25dp" />
 
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-        android:id="@+id/youtube_player_view"
+        android:id="@+id/recycler_player"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
