--- a/Android/app/src/main/res/layout/fragment_day_statistic.xml
+++ b/Android/app/src/main/res/layout/fragment_day_statistic.xml
@@ -75,6 +75,22 @@
             android:layout_height="0dp"
             android:layout_weight="30" />
 
+        <TextView
+            android:id="@+id/txt_emotion"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:gravity="center"
+            android:text="화남" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            tools:listitem="@layout/emotion_item_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="45" />
+
     </LinearLayout>
 
     <Space
