TF-94 json으로 userId를 보내도 인지가능

--- a/Flask_server/app/templates/statPostTest.html
+++ b/Flask_server/app/templates/statPostTest.html
@@ -36,7 +36,7 @@
 
     let urlParams = {
         emotion_data: emotion,
-
+        userId : "regiTest",
         };
     
     let urlParamsjson = JSON.stringify(urlParams)
